--- a/.github/workflows/test-linux-ppc64le.yaml
+++ b/.github/workflows/test-linux-ppc64le.yaml
@@ -44,7 +44,12 @@ jobs:
             core.exportVariable('GOOS', goos)
             core.exportVariable('GOARCH', goarch)
 
-            core.exportVariable('GOFLAGS', '-trimpath -mod=readonly')
+            core.exportVariable('GOFLAGS', '-race -trimpath -mod=readonly')
+
+            // Enable Cgo explicitly for -race flag since we are cross compiling.
+
+            core.exportVariable('CGO_ENABLED', '1')
+            core.exportVariable('CC', 'powerpc64le-linux-gnu-gcc')
 
             // Get a list of go release tags.
 
@@ -68,13 +73,47 @@ jobs:
               core.exportVariable('GOMODCACHE', modcache)
             }
 
-            // Install QEMU.
+            // Install QEMU and GCC cross compiler.
+
             execFileSync('sudo', [
               'apt-get', 'install',
               '--no-install-recommends', '-y',
-              'qemu-user-static',
+              'qemu-user',
+              'qemu-user-binfmt',
+              'gcc-powerpc64le-linux-gnu',
+              'libc6-dev-ppc64el-cross',
+              'libtsan0-ppc64el-cross',
             ], {
               stdio: 'inherit',
+            })
+
+            // Pass target sysroot and program loader path to QEMU.
+
+            core.exportVariable('QEMU_LD_PREFIX', '/usr/powerpc64le-linux-gnu')
+
+            // Prebuilt Go releases do not contain race detector runtime for non-host architectures.
+            // Download syso object for the latest known **major** release and place it in GOROOT.
+
+            const latestReleaseTag = releaseTags[releaseTags.length-1]
+
+            const goroot = execFileSync('go', ['env', 'GOROOT']).toString().trim()
+
+            const sysoName = `race_${process.env.GOOS}_${process.env.GOARCH}.syso`
+            const sysoPath = `src/runtime/race/${sysoName}`
+            const sysoDest = `${goroot}/${sysoPath}`
+            const sysoURL = 'https://raw.githubusercontent.com/golang/go'
+                          + `/${latestReleaseTag}/${sysoPath}`
+
+            core.info(`Downloading ${sysoName} to ${sysoDest} from ${sysoURL}`)
+            https.get(sysoURL, (resp) => {
+              if (resp.statusCode !== 200) {
+                core.setFailed(`download race runtime: ${resp.statusCode} ${resp.statusMessage}`)
+                return
+              }
+              const dest = fs.createWriteStream(sysoDest)
+              resp.pipe(dest)
+            }).on('error', (err) => {
+              core.setFailed(`download race runtime: ${err}`)
             })
 
       - name: Set up cache
@@ -102,7 +141,7 @@ jobs:
         working-directory: ${{ matrix.main }}
 
       - name: Run tests
-        run: go test -v -coverprofile=coverage.txt ./...
+        run: go test -coverprofile=coverage.txt ./...
         working-directory: ${{ matrix.main }}
 
       - name: Upload coverage
