Add linux/armv{5,6,7} to test-all.yaml

--- a/.github/workflows/test-all.yaml
+++ b/.github/workflows/test-all.yaml
@@ -16,6 +16,9 @@ jobs:
           - 1.15.x
         platform:
           - linux/ppc64le
+          - linux/armv5
+          - linux/armv6
+          - linux/armv7
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
