--- a/.github/workflows/test-all.yaml
+++ b/.github/workflows/test-all.yaml
@@ -15,6 +15,7 @@ jobs:
           - 1.14.x
           - 1.15.x
         platform:
+          - linux/amd64
           - linux/ppc64le
           - linux/armv5
           - linux/armv6
