Add windows/amd64 to test-all.yaml

--- a/.github/workflows/test-all.yaml
+++ b/.github/workflows/test-all.yaml
@@ -54,6 +54,11 @@ jobs:
               ], [
                 'darwin/amd64',
               ]),
+              ...cartesian([
+                'windows-latest',
+              ], [
+                'windows/amd64',
+              ]),
             ])
             return {
               include: matrix.map(([go, runner, target]) => ({ go, runner, target })),
