--- a/.github/workflows/test-all.yaml
+++ b/.github/workflows/test-all.yaml
@@ -44,6 +44,7 @@ jobs:
                 'ubuntu-20.04',
               ], [
                 'linux/amd64',
+                'linux/arm64',
                 'linux/ppc64le',
                 'linux/armv5',
                 'linux/armv6',
