Change matrix columns order in job name

--- a/.github/workflows/test-all.yaml
+++ b/.github/workflows/test-all.yaml
@@ -62,7 +62,7 @@ jobs:
               ]),
             ])
             return {
-              include: matrix.map(([go, runner, target]) => ({ go, runner, target })),
+              include: matrix.map(([go, runner, target]) => ({ go, target, runner })),
             }
   run:
     name: Run
