--- a/.github/workflows/test-all.yaml
+++ b/.github/workflows/test-all.yaml
@@ -46,6 +46,7 @@ jobs:
                 'linux/amd64',
                 'linux/arm64',
                 'linux/ppc64le',
+                'linux/386',
                 'linux/armv5',
                 'linux/armv6',
                 'linux/armv7',
@@ -59,6 +60,7 @@ jobs:
                 'windows-latest',
               ], [
                 'windows/amd64',
+                'windows/386',
               ]),
             ])
             return {
