--- a/.github/workflows/test-all.yaml
+++ b/.github/workflows/test-all.yaml
@@ -45,6 +45,7 @@ jobs:
               ], [
                 'linux/amd64',
                 'linux/arm64',
+                'linux/ppc64',
                 'linux/ppc64le',
                 'linux/s390x',
                 'linux/386',
