--- a/.github/workflows/test-all.yaml
+++ b/.github/workflows/test-all.yaml
@@ -47,11 +47,16 @@ jobs:
                 'linux/arm64',
                 'linux/ppc64',
                 'linux/ppc64le',
+                'linux/mips64',
+                'linux/mips64le',
+                'linux/riscv64',
                 'linux/s390x',
                 'linux/386',
                 'linux/armv5',
                 'linux/armv6',
                 'linux/armv7',
+                'linux/mips',
+                'linux/mipsle',
               ]),
               ...cartesian([
                 'macos-latest',
@@ -64,7 +69,9 @@ jobs:
                 'windows/amd64',
                 'windows/386',
               ]),
-            ])
+            ]).filter(([go, runner, target]) =>
+              !(go == '1.14.x' && target == 'linux/riscv64')) // supported since 1.15.x
+
             core.info(`Built matrix with ${matrix.length} jobs`)
             return {
               include: matrix.map(([go, runner, target]) => ({ target, go, runner })),
