--- a/.github/workflows/test-all.yaml
+++ b/.github/workflows/test-all.yaml
@@ -47,16 +47,18 @@ jobs:
                 'linux/arm64',
                 'linux/ppc64',
                 'linux/ppc64le',
-                'linux/mips64',
-                'linux/mips64le',
                 'linux/riscv64',
                 'linux/s390x',
                 'linux/386',
                 'linux/armv5',
                 'linux/armv6',
                 'linux/armv7',
-                'linux/mips',
-                'linux/mipsle',
+                // We can’t run GOARCH=mips* under qemu-user emu.
+                // See https://github.com/golang/go/issues/33746
+                //'linux/mips64',
+                //'linux/mips64le',
+                //'linux/mips',
+                //'linux/mipsle',
               ]),
               ...cartesian([
                 'macos-latest',
